--- a/emendas.Rmd
+++ b/emendas.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "Emenda Parlamentar (total aplicado entre 2015 a agosto de 2022)"
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
@@ -12,7 +12,7 @@ library(flexdashboard)
 ```
 
 ```{r}
-options(encoding = 'Latin1')
+options(encoding = 'Latin1',digits = 3,scipen=999 )
 ```
 
 
@@ -27,6 +27,7 @@ library(leaflet)
 library(openxlsx)
 library(shiny)
 library(shinyWidgets)
+library(pre)
 ```
 
 ```{r}
@@ -45,9 +46,9 @@ tabela_reais = function (df,coluna = NULL) {
                       extend = "collection",
                       buttons = c("csv", "excel", "pdf"),
                       text = "Download" ) ),
-                  lengthMenu = list( c(-1, 5, 10,20),
-                                     c( "tudo",5, 10, 20)),
-                  pageLength = 20 )
+                  lengthMenu = list( c(-1, 10, 15,20),
+                                     c( "tudo",10, 15, 20)),
+                  pageLength =15 )
       )%>%
   formatRound(
   # formatar apenas as colunas numericas.
@@ -64,7 +65,7 @@ tabela_reais = function (df,coluna = NULL) {
 ```
 
 ```{r}
-emendas <- read_excel("C:/Users/andre.ferrari/Downloads/emendas_hist.xlsx",     skip = 9)
+emendas <- read_excel("emendas_hist.xlsx",     skip = 8)
 
 
 
@@ -73,7 +74,9 @@ emendas <-    clean_names(emendas)
 
 emendas <-  rename(emendas, despesas_pagas =movim_liquido_r_item_informacao )
 
-emendas <- emendas %>% filter(!is.na(despesas_pagas))
+emendas <- emendas %>% filter(!is.na(despesas_pagas), )
+
+emendas <- emendas %>% filter(autor_emendas_orcamento_nome != "PTRES ANTERIOR A 2015")
 
 emendas <- emendas %>% separate(autor_emendas_orcamento_nome, into = c("autor_emenda","numero_emenda"), sep = "/" )
 
@@ -83,41 +86,11 @@ emendas <- emendas %>% mutate (autor_emenda = str_trim(autor_emenda))
 emendas <- emendas %>% mutate(mun_uf = str_c (municipio_cel, "-",uf_cel_sigla))
 
 
-emendas <-  emendas %>% mutate (code_regiao = case_when(
-  
-  regiao_cel == "NORTE" ~ 1,
-  regiao_cel == "NORDESTE" ~ 2,
-  regiao_cel == "SUDESTE" ~ 3,
-  regiao_cel == "SUL" ~ 4,
-  regiao_cel == "CENTRO OESTE" ~ 5
-  ))
 
 
-emendas <- emendas %>% mutate(tipo_local =   case_when(
-  municipio_cel != "SEM INFORMACAO" ~ "Município",
-  regiao_cel == "CENTRO-OESTE" & uf_cel_nome == "SEM INFORMACAO" ~ "Região",
-  regiao_cel == "NORTE"& uf_cel_nome == "SEM INFORMACAO" ~ "Região",
-  regiao_cel == "SUL" & uf_cel_nome == "SEM INFORMACAO"~ "Região",
-  regiao_cel == "NORDESTE"& uf_cel_nome == "SEM INFORMACAO" ~ "Região",
-  regiao_cel == "SUDESTE" & uf_cel_nome == "SEM INFORMACAO"~ "Região",
-  regiao_cel == "EXTERIOR" & uf_cel_nome == "SEM INFORMACAO"~ "Exterior",
-  regiao_cel == "NACIONAL" & uf_cel_nome == "SEM INFORMACAO"~ "Brasil",
-  TRUE ~ "UF"
-  
-  ))
-
-
-emendas <- emendas %>%  mutate (local = case_when(
-  tipo_local == "Município"  ~ mun_uf,
-  tipo_local == "UF"  ~ str_c ( uf_cel_sigla,": municípios não identificados"),
-  tipo_local == "Região"  ~ str_c ( regiao_cel,": municípios não identificados"),
-  tipo_local == "Brasil"  ~ str_c ( tipo_local,": municípios não identificados"),
-  tipo_local == "Exterior"  ~ str_c ( tipo_local),
-  
-))
 
 library(readr)
-TABMUN <- read_delim("C:/Users/andre.ferrari/Downloads/TABMUN.csv", 
+TABMUN <- read_delim("TABMUN.csv", 
     delim = ";", escape_double = FALSE, trim_ws = TRUE) 
 
 TABMUN <- TABMUN %>% mutate(mun_uf = str_c (municipio_cel, "-",uf_cel_sigla))
@@ -126,9 +99,17 @@ TABMUN <- TABMUN %>% mutate(mun_uf = str_c (municipio_cel, "-",uf_cel_sigla))
 emendas <- left_join(emendas,TABMUN %>% select(municipio_cel, codigo_ibge))
 
 # municipios <- read_csv("https://raw.githubusercontent.com/kelvins/Municipios-Brasileiros/main/csv/municipios.csv")
-# municipios <-  rename(municipios, latitude_mun = latitude)
-# municipios <-  rename(municipios,   longitude_mun =longitude )
-# municipios <-  rename(municipios,   nome_mun =nome ) %>% select(!codigo_uf)
+
+municipios <- read_excel("municipios.xlsx")
+
+municipios <-  rename(municipios,   nome_mun =nome ) %>% select(!codigo_uf)
+
+
+emendas <- left_join(emendas, municipios) 
+
+emendas <- emendas %>% mutate(nome_mun_uf = str_c(nome_mun,"-",uf_cel_sigla))
+
+# write.xlsx(municipios,"municipios.xlsx")
 # 
 # 
 # estados <- read_csv("https://raw.githubusercontent.com/kelvins/Municipios-Brasileiros/main/csv/estados.csv")
@@ -139,31 +120,61 @@ emendas <- left_join(emendas,TABMUN %>% select(municipio_cel, codigo_ibge))
 ```
 
 
-Inputs {.sidebar}
--------------------------------------
-```{r}
- selectInput("autor", label = h3("Escolha o autor da emenda"), 
-    choices = unique(emendas$autor_emenda), 
-    multiple = TRUE,
-    selectize = TRUE,
-    selected = "EDUARDO BOLSONARO")
-autor <- reactive (emendas %>% filter(autor_emenda %in% c(input$autor)))
-
-```
-
-
-```{r eval=FALSE, include=FALSE}
-tabela_reais(emendas %>% group_by(autor_emenda, municipio_cel, uf_cel_sigla, regiao_cel) %>% summarise(valor_pago = sum(despesas_pagas)))
-```
 
 ```{r}
+emendas <-  emendas %>% mutate (code_regiao = case_when(
+  
+  regiao_cel == "NORTE" ~ 1,
+  regiao_cel == "NORDESTE" ~ 2,
+  regiao_cel == "SUDESTE" ~ 3,
+  regiao_cel == "SUL" ~ 4,
+  regiao_cel == "CENTRO-OESTE" ~ 5
+  ))
 
 
-# 
-# emendas <- left_join(emendas,municipios)
-# 
-# emendas <- left_join(emendas, estados, by = c("uf_cel_sigla" = "uf"))
+emendas <- emendas %>% mutate(tipo_local =   case_when(
+  municipio_cel != "SEM INFORMACAO" ~ "município",
+  regiao_cel == "CENTRO-OESTE" & uf_cel_nome == "SEM INFORMACAO" ~ "regiao",
+  regiao_cel == "NORTE"& uf_cel_nome == "SEM INFORMACAO" ~ "regiao",
+  regiao_cel == "SUL" & uf_cel_nome == "SEM INFORMACAO"~ "regiao",
+  regiao_cel == "NORDESTE"& uf_cel_nome == "SEM INFORMACAO" ~ "regiao",
+  regiao_cel == "SUDESTE" & uf_cel_nome == "SEM INFORMACAO"~ "regiao",
+  regiao_cel == "EXTERIOR" & uf_cel_nome == "SEM INFORMACAO"~ "Exterior",
+  regiao_cel == "NACIONAL" & uf_cel_nome == "SEM INFORMACAO"~ "Brasil",
+  TRUE ~ "UF"
+  
+  ))
+
+
+# emendas <- emendas %>%  mutate (local = case_when(
+#   tipo_local == "município"  ~ mun_uf,
+#   tipo_local == "UF"  ~ str_c ( uf_cel_sigla,": municípios não identificados"),
+#   tipo_local == "Região"  ~ str_c ( regiao_cel,": municípios não identificados"),
+#   tipo_local == "Brasil"  ~ str_c ( tipo_local,": municípios não identificados"),
+#   tipo_local == "Exterior"  ~ str_c ( tipo_local),
+#   
+# ))
+
+
+emendas <- emendas %>%  mutate (local = case_when(
+
+  tipo_local == "UF"  ~ uf_cel_sigla,
+  tipo_local == "regiao"  ~ regiao_cel,
+  tipo_local == "Brasil"  ~ tipo_local,
+  tipo_local == "Exterior"  ~ tipo_local,
+    tipo_local == "município" ~ nome_mun_uf
+))
+
+emendas <- emendas %>% mutate(sigla = case_when(
+  
+  local == "CENTRO-OESTE" ~ "CO",
+  local == "NORDESTE" ~ "NE",
+  local == "SUL" ~ "S",
+  local == "NORTE" ~ "N",
+  local == "SUDESTE" ~ "SE"))
 ```
+
+
 
 
 ```{r message=FALSE, include=FALSE}
@@ -171,59 +182,61 @@ library(geobr)
 
 #| collapse: true
 
-regiao <- read_region(year=2020) %>% mutate(name_region = ifelse(name_region == "Centro Oeste", "Centro-Oeste", name_region))
+regiao <- read_region(year=2020) 
 regiao <- regiao %>% mutate(sigla = case_when(
   
   name_region == "Centro Oeste" ~ "CO",
   name_region == "Nordeste" ~ "NE",
   name_region == "Sul" ~ "S",
   name_region == "Norte" ~ "N",
-  name_region == "Sudeste" ~ "SE",))
+  name_region == "Sudeste" ~ "SE"))
 
 
 
 uf <- read_state(year = 2020)
 
 
-cidades <- read_municipal_seat(year = 2010)
-# brasil <- read_country(year = 2020)
-# 
-# library(maps)
-# 
-# dat <- iso3166
-# head(dat)
-# 
-# dat$brasil <- dat$ISOname == "Brazil"
+# cidades <- read_municipal_seat(year = 2010)
+
 ```
 ```{r}
+emendas_react <- reactive(emendas %>% filter(autor_emenda %in% input$autor))
 
-# emendas <- emendas %>% mutate(local = ifelse(municipio_cel == "SEM INFORMACAO", regiao_cel, str_c(municipio_cel, "-", uf_cel_sigla)))
+filtro_uf <- reactive (emendas_react() %>% filter(tipo_local == "UF"))
+
+filtro_regiao <- reactive (emendas_react() %>% filter(tipo_local == "regiao"))
+
+# geo_municipio <-reactive(left_join(emendas_react() %>% filter(tipo_local== "município") %>% select(codigo_ibge, autor_emenda, despesas_pagas), municipios))
+
+geo_municipio <-reactive(emendas_react() %>% filter(tipo_local== "município") )
 
 
+
+geo_uf <- reactive( uf %>%  filter (abbrev_state %in% unique(filtro_uf()$uf_cel_sigla)))
+
+
+geo_regiao <- reactive( regiao %>%  filter (sigla %in% unique(filtro_regiao()$sigla)))
+# geo_regiao <- (left_join (emendas %>% filter(tipo_local== "regiao") %>% select(local, autor_emenda), regiao, by = c("local"= "name_region")))
+# 
+# addPolygons(data = regiao %>% filter(code_region %in% unique(autor() %>% filter(tipo_local== "Região") %>% select(code_regiao))))  %>%
+#   addPolygons(data = uf %>% filter (abbrev_state %in% unique(autor() %>% filter(tipo_local== "UF") %>% select(uf_cel_sigla))), fillColor = topo.colors(100, alpha = NULL), stroke = FALSE) %>% 
+#    addMarkers(data = cidades %>% filter(code_muni %in% autor()$codigo_ibge),  clusterOptions = markerClusterOptions())
 
 ```
 
 
-```{r}
-# emendas <- emendas %>% mutate(latitude = ifelse(is.na(latitude_mun), latitude_uf, latitude_mun), longitude = ifelse(is.na(longitude_mun), longitude_uf, longitude_mun), nome = ifelse(is.na(nome_mun), nome_uf, str_c(nome_mun, "-",uf_cel_sigla)))
-# 
-# emendas <- emendas %>% mutate(nome = ifelse(is.na(nome), regiao_cel, nome))
-# 
-# emendas <- emendas %>% mutate(latitude = case_when(nome == "EXTERIOR" ~ -15.7795 ,
-#   nome == "NACIONAL"  ~ -15.7795 ,
-#   TRUE ~ latitude))
-# 
-# 
-# emendas <- emendas %>% mutate(longitude = case_when(nome == "EXTERIOR" ~ - 32 ,
-#   nome == "NACIONAL"  ~ -47.9297 ,
-#   TRUE ~ longitude))
+
+```{r eval=FALSE, include=FALSE}
+p <- emendas %>% group_by(orgao_uge_nome) %>% summarise(despesas_pagas = sum(despesas_pagas)) %>%
+  ggplot(aes(x = (fct_reorder(orgao_uge_nome, despesas_pagas)), y = despesas_pagas, fill = orgao_uge_nome)) +
+  geom_col() + 
+  labs(x = "autor")+ coord_flip()+
+   scale_fill_discrete()+
+  theme(legend.position = "none")  
+ggplotly(p)
 ```
 
-```{r}
-# leaflet(emendas) %>% addTiles() %>% addMarkers(
-#   clusterOptions = markerClusterOptions()
-# )
-```
+
 
 ```{r eval=FALSE, include=FALSE}
 p <- emendas %>% group_by(regiao_cel) %>% summarise(despesas_pagas = sum(despesas_pagas)) %>%
@@ -235,6 +248,18 @@ p <- emendas %>% group_by(regiao_cel) %>% summarise(despesas_pagas = sum(despesa
 ggplotly(p)
 
 ```
+
+
+```{r eval=FALSE, include=FALSE}
+p <- emendas %>% group_by(ano_lancamento, orgao_uge_nome) %>% summarise(despesas_pagas = sum(despesas_pagas)) %>%
+  ggplot(aes(x = ano_lancamento, y = despesas_pagas, fill = orgao_uge_nome)) +
+  geom_col() + 
+  labs(x = "ano")+ 
+   scale_fill_discrete()+
+  theme(legend.position = "none")  
+ggplotly(p)
+```
+
 ```{r eval=FALSE, include=FALSE}
 p <- emendas %>% group_by(ano_lancamento, resultado_eof_codigo) %>% summarise(despesas_pagas = sum(despesas_pagas)) %>%
   ggplot(aes(x = ano_lancamento, y = despesas_pagas, fill = resultado_eof_codigo)) +
@@ -244,19 +269,17 @@ p <- emendas %>% group_by(ano_lancamento, resultado_eof_codigo) %>% summarise(de
   theme(legend.position = "none")  
 ggplotly(p)
 ```
+
+Inputs {.sidebar}
+-------------------------------------
 ```{r}
 
 
-```
+selectInput  ("autor", label = h3("Escolha o autor da emenda"), 
+    choices = sort(unique(emendas$autor_emenda), decreasing = FALSE), 
+   
+    selected = "EDUARDO BOLSONARO", selectize = TRUE,multiple = TRUE)
 
-```{r}
-
-
-# addPolygons(data = cidades %>% filter(code_muni %in% emendas$codigo_ibge), fillColor = "red", stroke = FALSE)
-```
-
-
-```{r}
 
 ```
 
@@ -266,7 +289,8 @@ ggplotly(p)
 Column {data-width=450}
 -----------------------------------------------------------------------
 
-### Chart A
+
+### Mapa
 
 ```{r}
 
@@ -275,23 +299,33 @@ Column {data-width=450}
 renderLeaflet({
   
    leaflet() %>% addTiles() %>%
-  addPolygons(data = regiao %>% filter(code_region %in% autor()$code_regiao))  %>%
-  addPolygons(data = uf %>% filter (abbrev_state %in% autor()$uf_cel_sigla), fillColor = topo.colors(10, alpha = NULL), stroke = FALSE) %>% 
-   addMarkers(data = cidades %>% filter(code_muni %in% autor()$codigo_ibge),  clusterOptions = markerClusterOptions())
+  addPolygons(data = geo_regiao())  %>%
+  addPolygons(data = geo_uf()) %>%
+    addMarkers(data = geo_municipio(),  clusterOptions = markerClusterOptions()  , label = str_c(geo_municipio()$nome_mun,": " ,prettyNum( geo_municipio()$despesas_pagas, big.mark = ".", decimal.mark = "," )))
   
 })
 
 ```
 
-Column {data-width=550}
+Column {.tabset}
 -----------------------------------------------------------------------
 
 
-### Chart C
+### Por localidade
+
 
 ```{r}
 
 
-renderDT({tabela_reais(autor() %>% group_by(  local, acao_governo_nome, programa_governo_nome) %>% summarise(valor_pago = sum(despesas_pagas)))}) 
+renderDT({tabela_reais(emendas_react() %>% group_by(  local, tipo_local) %>% summarise(valor_pago = sum(despesas_pagas)))}) 
+```
+
+
+### Tabela
+
+```{r}
+
+
+renderDT({tabela_reais(emendas_react() %>% group_by( autor_emenda, local, tipo_local, orgao_uge_nome,acao_governo_nome, programa_governo_nome) %>% summarise(valor_pago = sum(despesas_pagas)))}) 
 ```
 
